@@ -190,11 +190,15 @@ AC_ARG_ENABLE(gtk-theme,
     enable_gtk_theme=yes)
 
 if test "x$enable_gtk_theme" = "xyes"; then
-	AC_MSG_CHECKING([for gtk+ engine support])
+	GTK_VERSION=
+
 	PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 1.3.12, enable_gtk_theme=yes,
-        	enable_gtk_theme=no)
-	AC_MSG_RESULT([$enable_gtk_theme])
-GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
+			       enable_gtk_theme=no)
+
+	if test "x$enable_gtk_theme" = "xyes"; then
+	   GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
+	fi
+
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 AC_SUBST(GTK_VERSION)
